option java_package = "protobuf.generate.internal";
option java_outer_classname = "Internal";

//Message destination
enum Dest {
    Client = 1;
    Auth = 2;
    Logic = 3;
    Gate = 4;
}

//Messages between servers
//ptoNum, the number of parsing handler
// netId , when a client connection established, a netId will be allocated to a userId
message GTransfer {
    required Dest   dest  = 1;
    optional uint64 netId = 2;
    required string userId = 3;
    required uint32 ptoNum = 4;
	required bytes  msg = 5;
}

//Message when server connection established
message Greet {
    enum From {
        Logic = 1;
        Gate  = 2;
        Auth  = 3;
    }
    required From from = 1;
}

